feat: `WaitingPromoter`의 재시도 횟수를 5회로 증가